<resources>
    <string name="app_name">我的管家</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="set">设置</string>
    <string name="hint">提示</string>
    <string name="ok">确定</string>
    <string name="esc">取消</string>
    <string name="help">帮助</string>

    <string name="mode">模式</string>
    <string name="home">家庭</string>
    <string name="work">工作</string>
    <string name="life">日常</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
