<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SetActivity">

    <RelativeLayout
        android:id="@+id/setToolBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageViewExit"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@android:drawable/stat_notify_sync" />

        <TextView
            android:id="@+id/textViewSetFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:text="@string/set" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewModeFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setToolBox"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/mode" />

    <RadioGroup
        android:id="@+id/modeChooseBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewModeFlag"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButtonHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/radioButtonWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/work" />

        <RadioButton
            android:id="@+id/radioButtonLife"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/modeChooseBox"
        android:layout_marginTop="-10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/baiduzhidaoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@android:drawable/editbox_background_normal"
                android:minHeight="50dp"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textBaiduzhidao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="启用百度知道搜索"
                    android:layout_marginLeft="10dp"/>

                <CheckBox
                    android:id="@+id/checkBaiduzhidao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>